--- a/src/pages/GreenFinancingforInfrastructure.css
+++ b/src/pages/GreenFinancingforInfrastructure.css
@@ -1,42 +1,144 @@
-@media (max-width: 649px) {
-
-	.container.noPTop {
-		padding-top: 1rem;
-	}
+.GreenFinancingforInfrastructure .list-title {
+  font-size: 1.1rem;
+  margin-bottom: 1.2rem;
 }
 
-.procurement .border {
-	border: 1px dashed rgba(134, 134, 134, 0.5);
-	margin: 2rem 1rem;
+.GreenFinancingforInfrastructure .icon-text-cards-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+  gap: 2rem;
+}
+
+.GreenFinancingforInfrastructure .icon-text-cards {
+	display: flex;
+	/* flex-wrap: wrap; */
+	gap: 2rem;
+	width: calc(50% - 2rem);
+	justify-content: flex-start;
+	align-content: flex-start;
+}
+
+.GreenFinancingforInfrastructure .icon-img {
+	align-items: center;
+	text-align: center;
+}
+
+.GreenFinancingforInfrastructure .icon-img img{
+	height: 40px;
+	width: 40px;
+}
+
+.GreenFinancingforInfrastructure .icon-text-cards-description {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 400px;
+}
+
+.icon-text-cards-title {
+  font-weight: 700;
+}
+
+.icon-text-cards-detail ul {
+  margin: 0;
+  padding-left: 1rem;
+}
+
+@media (max-width: 649px) {
+  .GreenFinancingforInfrastructure .Header3 .container {
+    padding-bottom: 0;
+  }
+
+  .container.noPTop {
+    padding-top: 1rem;
+  }
+  .GreenFinancingforInfrastructure .hero {
+    height: 360px;
+  }
+
+  .GreenFinancingforInfrastructure .hero-content h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .GreenFinancingforInfrastructure .hero-content {
+    bottom: 2rem;
+  }
+
+  .GreenFinancingforInfrastructure .hero-content p {
+    font-size: 0.875rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .GreenFinancingforInfrastructure .list-title {
+    text-align: left;
+  }
+}
+
+@media (min-width: 768px) {
+  .GreenFinancingforInfrastructure .list-title {
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .GreenFinancingforInfrastructure .list-title {
+    text-align: left;
+  }
+}
+
+.GreenFinancingforInfrastructure .border {
+  border: 1px dashed rgba(134, 134, 134, 0.5);
+  margin: 2rem 1rem;
 }
 
 .VCard-cnt {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .v-small-text {
-	text-align: center;
-	margin    : 1rem 0 0 0;
-	font-size : 0.9375rem;
+  text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.9375rem;
 }
 
 @media (min-width: 1024px) {
 
-	.procurement .mTop2 {
-		margin: 3rem 0;
-	}
+  .GreenFinancingforInfrastructure .mTop2 {
+    margin: 3rem 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .GreenFinancingforInfrastructure .list-title {
+    font-size: 1.3rem;
+    margin: 1rem 0 1rem 0;
+  }
 }
 
 @media (min-width: 1400px) {
 
-	.procurement .mTop2 {
-		margin: 3rem 0;
-	}
+  .GreenFinancingforInfrastructure .mTop2 {
+    margin: 3rem 0;
+  }
+  .GreenFinancingforInfrastructure .hero {
+    height: 640px;
+  }
+  .GreenFinancingforInfrastructure .hero-content h3 {
+    font-size: 3.25rem;
+  }
+
+  .GreenFinancingforInfrastructure .hero-content p {
+    font-size: 1.125rem;
+  }
+  .GreenFinancingforInfrastructure .list-title {
+    font-size: 1.3rem;
+    margin: 1rem 0 2.5rem 0;
+  }
 }
 
-
-/* @media (min-width: 992px) {
-    .Header3 .container {
-        padding: 8rem 3rem;
-    }
-} */
+@media (min-width: 1600px) {
+}
