--- a/src/pages/GreenDesignsAndNatureBasedInfrastructure.css
+++ b/src/pages/GreenDesignsAndNatureBasedInfrastructure.css
@@ -1,34 +1,172 @@
-@media (max-width: 649px) {
-
-	.container.noPTop {
-		padding-top: 1rem;
-	}
+.GreenDesignsAndNatureBasedInfrastructure .list-title {
+  font-size: 1.1rem;
+  margin-bottom: 1.2rem;
 }
 
-.procurement .border {
-	border: 1px dashed rgba(134, 134, 134, 0.5);
-	margin: 2rem 1rem;
+.GreenDesignsAndNatureBasedInfrastructure .icon-text-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 2rem;
+  margin: 0 2rem 0 2rem;
+}
+
+.GreenDesignsAndNatureBasedInfrastructure .icon-text-cards {
+  display: flex;
+  /* flex-wrap: wrap; */
+  gap: 2rem;
+  width: calc(50% - 2rem);
+  justify-content: flex-start;
+  align-content: flex-start;
+}
+
+.GreenDesignsAndNatureBasedInfrastructure .icon-img {
+  align-items: center;
+  text-align: center;
+}
+
+.GreenDesignsAndNatureBasedInfrastructure .icon-img img {
+  height: 40px;
+  width: 40px;
+}
+
+.GreenDesignsAndNatureBasedInfrastructure .icon-text-cards-description {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 400px;
+  /* line-height: 1rem; */
+}
+
+.icon-text-cards-title {
+  font-weight: 700;
+}
+
+.icon-text-cards-detail ul {
+  margin: 0;
+  padding-left: 1rem;
+}
+
+@media (max-width: 649px) {
+  .GreenDesignsAndNatureBasedInfrastructure .Header3 .container {
+    padding-bottom: 0;
+  }
+
+  .container.noPTop {
+    padding-top: 1rem;
+  }
+  .GreenDesignsAndNatureBasedInfrastructure .hero {
+    height: 360px;
+  }
+
+  .GreenDesignsAndNatureBasedInfrastructure .hero-content h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .GreenDesignsAndNatureBasedInfrastructure .hero-content {
+    bottom: 2rem;
+  }
+
+  .GreenDesignsAndNatureBasedInfrastructure .hero-content p {
+    font-size: 0.875rem;
+  }
+
+  .GreenDesignsAndNatureBasedInfrastructure .icon-text-cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 2rem;
+  }
+  .GreenDesignsAndNatureBasedInfrastructure .icon-text-cards {
+    display: flex;
+    gap: 1.5rem;
+    width: 100%;
+  }
+
+  /* .GreenDesignsAndNatureBasedInfrastructure .icon-img {
+    align-items: center;
+    text-align: center;
+  } */
+
+  .GreenDesignsAndNatureBasedInfrastructure .icon-img img {
+    height: 30px;
+    width: 30px;
+  }
+
+  .GreenDesignsAndNatureBasedInfrastructure .icon-text-cards-description {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .GreenDesignsAndNatureBasedInfrastructure .list-title {
+    text-align: left;
+  }
+}
+
+@media (min-width: 768px) {
+  .GreenDesignsAndNatureBasedInfrastructure .list-title {
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .GreenDesignsAndNatureBasedInfrastructure .list-title {
+    text-align: left;
+  }
+}
+
+.GreenDesignsAndNatureBasedInfrastructure .border {
+  border: 1px dashed rgba(134, 134, 134, 0.5);
+  margin: 2rem 1rem;
 }
 
 .VCard-cnt {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .v-small-text {
-	text-align: center;
-	margin    : 1rem 0 0 0;
-	font-size : 0.9375rem;
+  text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.9375rem;
 }
 
 @media (min-width: 1024px) {
+  .GreenDesignsAndNatureBasedInfrastructure .mTop2 {
+    margin: 3rem 0;
+  }
+}
 
-	.procurement .mTop2 {
-		margin: 3rem 0;
-	}
+@media (min-width: 1200px) {
+  .GreenDesignsAndNatureBasedInfrastructure .list-title {
+    font-size: 1.3rem;
+    margin: 1rem 0 1rem 0;
+  }
 }
 
 @media (min-width: 1400px) {
-	.procurement .mTop2 {
-		margin: 3rem 0;
-	}
+  .GreenDesignsAndNatureBasedInfrastructure .mTop2 {
+    margin: 3rem 0;
+  }
+  .GreenDesignsAndNatureBasedInfrastructure .hero {
+    height: 640px;
+  }
+  .GreenDesignsAndNatureBasedInfrastructure .hero-content h3 {
+    font-size: 3.25rem;
+  }
+
+  .GreenDesignsAndNatureBasedInfrastructure .hero-content p {
+    font-size: 1.125rem;
+  }
+  .GreenDesignsAndNatureBasedInfrastructure .list-title {
+    font-size: 1.3rem;
+    margin: 1rem 0 2.5rem 0;
+  }
+}
+
+@media (min-width: 1600px) {
 }
