--- a/src/pages/QII5LandingPage.css
+++ b/src/pages/QII5LandingPage.css
@@ -7,6 +7,11 @@
   margin: 0 auto;
 }
 
+.blue-link {
+  color: rgb(74, 142, 250);
+  text-decoration: underline;
+}
+
 .q4_landing_page .devider {
   width: 20%;
   height: 1px;
@@ -16,7 +21,38 @@
 
 .q4_landing_page .desk_image {
   display: none;
+
 }
+
+.qii5-sub-pages {
+  display: grid;
+}
+
+@media (min-width: 600px) {
+ .qii5-sub-pages {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .qii5-sub-pages {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.25rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .qii5-sub-pages {
+    margin: 3rem 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .qii5-sub-pages {
+    margin: 0.4rem 0;
+  }
+} 
 
 @media (min-width: 800px) {
   .q4_landing_page .desk_image {
@@ -31,7 +67,7 @@
 @media (min-width: 768px) {
   .top-resource-card-cnt-qii4 {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
     justify-content: center;
     max-width: 1270px;
@@ -42,7 +78,7 @@
 
 @media (min-width: 1200px) {
   .top-resource-card-cnt-qii4 {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .top-resource-card-btn {
@@ -96,24 +132,25 @@
 
 .qii4-video-title {
   font-size: 1.4rem;
-  font-weight: 600;
-  margin-bottom: 2rem;
+  font-weight: 800;
+  margin-bottom: 1rem;
 }
 
 .qii4-video-desc {
-  font-size: 35px;
+  font-size: 25px;
   /* font-weight: 300; */
   max-width: 1000px;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
 }
 
 .qii4-video-cta {
   background: #fff;
   color: #000;
   border: 1px solid #fff;
-  padding: 0.8rem 1.2rem;
+  padding: 0.3rem 1rem;
   border-radius: 50px;
-  font-size: 25px;
+  font-size: 21px;
+  margin-top: 1rem;
   cursor: pointer;
 }
 
@@ -143,7 +180,7 @@
 
   .qii4-video-title {
     font-size: 50px;
-    font-weight: 400;
+    font-weight: 500;
   }
 }
 
@@ -188,7 +225,6 @@
 }
 
 @media (max-width: 800px) {
-
   .qii4-video-desc {
     max-width: 100%;
   }
@@ -219,9 +255,14 @@
     padding: 2.5rem 0;
   }
 
-
   .qii4-video-cta {
     font-size: 0.8rem;
     padding: 0.35rem 1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .sub-pages {
+    margin: 0.3rem 0;
   }
 }
