--- a/src/pages/Decarbonizing_Infrastructure.css
+++ b/src/pages/Decarbonizing_Infrastructure.css
@@ -50,6 +50,19 @@
   font-size: 1rem;
 }
 
+.DecarbonizingInfrastructure .Decarbonization-Solutions-details-container {
+  width: 100%;
+  margin: 1rem;
+}
+
+.DecarbonizingInfrastructure .Decarbonization-Solutions-icon-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 80%;
+}
+
 @media (max-width: 649px) {
   .DecarbonizingInfrastructure .Header3 .container {
     padding-bottom: 0;
@@ -105,7 +118,7 @@
 
   .DecarbonizingInfrastructure .Decarbonizing-Infrastructure-img {
     width: 100%;
-  }
+  }  
 
   .DecarbonizingInfrastructure .Decarbonizing-Infrastructure-description {
     width: 100%;
@@ -142,6 +155,8 @@
     background: none;
   }
 }
+
+
 
 @media (min-width: 992px) {
   .DecarbonizingInfrastructure .list-title {
