--- a/src/pages/Decarbonizing_Infrastructure.css
+++ b/src/pages/Decarbonizing_Infrastructure.css
@@ -32,6 +32,7 @@
   margin: 1rem 1rem 0 1rem;
   font-size: 1.5rem;
   color: #002244;
+  line-height: 2rem;
 }
 
 .DecarbonizingInfrastructure .Decarbonizing-Infrastructure-details {
@@ -118,7 +119,7 @@
 
   .DecarbonizingInfrastructure .Decarbonizing-Infrastructure-img {
     width: 100%;
-  }  
+  }
 
   .DecarbonizingInfrastructure .Decarbonizing-Infrastructure-description {
     width: 100%;
@@ -130,7 +131,7 @@
   }
 
   .DecarbonizingInfrastructure .Decarbonizing-Infrastructure-description h2 {
-    margin: 1rem 1rem 0 1rem;
+    margin: 1rem 1rem 0 0;
     font-size: 1.3rem;
     color: #002244;
   }
@@ -138,7 +139,7 @@
   .DecarbonizingInfrastructure .Decarbonizing-Infrastructure-details {
     display: flex;
     flex-direction: column;
-    padding: 0.5rem;
+    padding: 0rem;
     gap: 0.5rem;
   }
 
@@ -155,8 +156,6 @@
     background: none;
   }
 }
-
-
 
 @media (min-width: 992px) {
   .DecarbonizingInfrastructure .list-title {
